--- a/ng/index.html
+++ b/ng/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <base href="/" />
+    <meta name="viewport" content="width=device-width">
     <title>WEB Lab 4</title>
 </head>
 <body bgcolor="blanchedalmond">
